--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "version": "is-prerelease || npm run update-changelog && git add CHANGELOG.md",
     "update-changelog": "conventional-changelog -p videojs -i CHANGELOG.md -s",
     "watch": "npm-run-all -p watch:*",
-    "watch:js": "npm run build:js -- -w"
+    "watch:js": "npm run build:js -- -w",
+    "install": "cp ./dist/* ../catn8-server/src/player/"
   },
   "keywords": [
     "videojs",
@@ -59,6 +60,7 @@
     "@babel/runtime": "^7.12.5",
     "@videojs/vhs-utils": "^3.0.2",
     "aes-decrypter": "3.1.2",
+    "catn8-pay": "^0.1.8",
     "global": "^4.4.0",
     "m3u8-parser": "4.7.0",
     "mpd-parser": "0.17.0",
