--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "update-changelog": "conventional-changelog -p videojs -i CHANGELOG.md -s",
     "watch": "npm-run-all -p watch:*",
     "watch:js": "npm run build:js -- -w",
-    "install": "cp ./dist/* ../catn8-server/src/player/"
+    "update": "npm i catn8-pay",
+    "install": "cp ./dist/* ../catn8-server/src/player/",
+    "release": "npm run build && npm run install"
   },
   "keywords": [
     "videojs",
@@ -60,7 +62,7 @@
     "@babel/runtime": "^7.12.5",
     "@videojs/vhs-utils": "^3.0.2",
     "aes-decrypter": "3.1.2",
-    "catn8-pay": "^0.1.8",
+    "catn8-pay": "^0.1.12",
     "global": "^4.4.0",
     "m3u8-parser": "4.7.0",
     "mpd-parser": "0.17.0",
